--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
             <p>Welcome to my portfolio!</p>
         </div>
         <div class="col-12 col-lg-6">
-            <img src="https://res.cloudinary.com/djdtmbpce/image/upload/v1711760505/l8mrq0vrbuaugbw9vpbt.jpg"
+            <img style="border-radius: 50%" src="https://res.cloudinary.com/djdtmbpce/image/upload/c_crop,g_auto,h_800,w_800/l8mrq0vrbuaugbw9vpbt.jpg"
                  alt="Profile Picture ;)"
                 class="d-block mx-lg-auto img-fluid" width="300"/>
         </div>
