--- a/Views/AdminProjects/Add.cshtml
+++ b/Views/AdminProjects/Add.cshtml
@@ -12,15 +12,15 @@
     <form method="post" class="">
         <div class="mb-3">
             <label class="form-label">Title</label>
-            <input type="text" class="form-control" id="title" asp-for="Title" />
+            <input type="text" class="form-control" id="title" asp-for="Title" required/>
         </div>
         <div class="mb-3">
             <label class="form-label">Content</label>
-            <textarea class="form-control" id="content" asp-for="Content"></textarea>
+            <textarea class="form-control" id="content" asp-for="Content" required></textarea>
         </div>
         <div class="mb-3">
             <label class="form-label">Description</label>
-            <input type="text" class="form-control" id="description" asp-for="Description" />
+            <input type="text" class="form-control" id="description" asp-for="Description" required />
         </div>
         <div class="mb-3">
             <label class="form-label">Featured Image Upload</label>
@@ -35,7 +35,7 @@
         </div>
         <div class="mb-3">
             <label class="form-label">Project URL</label>
-            <input type="text" class="form-control" id="projectUrl" asp-for="ProjectUrl" />
+            <input type="text" class="form-control" id="projectUrl" asp-for="ProjectUrl"/>
         </div>
         <div class="mb-3">
             <label class="form-label">Published Date</label>
