--- a/Views/AdminProjects/Edit.cshtml
+++ b/Views/AdminProjects/Edit.cshtml
@@ -14,15 +14,15 @@
             </div>
             <div class="mb-3">
                 <label class="form-label">Title</label>
-                <input type="text" class="form-control" id="title" asp-for="Title" />
+                <input type="text" class="form-control" id="title" asp-for="Title" required/>
             </div>
             <div class="mb-3">
                 <label class="form-label">Content</label>
-                <textarea class="form-control" id="content" asp-for="Content"></textarea>
+                <textarea class="form-control" id="content" asp-for="Content" required></textarea>
             </div>
             <div class="mb-3">
                 <label class="form-label">Description</label>
-                <input type="text" class="form-control" id="description" asp-for="Description" />
+                <input type="text" class="form-control" id="description" asp-for="Description" required />
             </div>
             <div class="mb-3">
                 <label class="form-label">Featured Image Upload</label>
