Make things look more pretty

--- a/Views/About/Index.cshtml
+++ b/Views/About/Index.cshtml
@@ -1,1 +1,12 @@
-﻿<h1>I'm So Cool.</h1>
+﻿<div class="container my-5">
+    <div class="row justify-content-center">
+        <div class="col-12 col-lg-6">
+            <h1 class="mb-3 text-center">
+                About Me
+            </h1>
+            <div class="mb-3 blog-details-content">
+                Growing up, I was always drawn to the immersive worlds and challenging gameplay of video games. One game that particularly captured my attention was World of Warcraft, which I started playing when I was just eight years old. I was too young to have an account of my own so I'd share one with my mom. I still remember walking through Ashenvale on my Night Elf priest thinking how amazing the atmosphere was. As I grew to love WoW, I was introduced to Warcraft 3 by my uncle and was shown the level editor within. I was amazed at the endless posibilities flowing through my 12 year old mind with what I could make. I think this was a turning point in my life where I realized I wanted to become a game developer.I played Minecraft with my cousin and we loved to build automated machines to do our work for us. We also LOVED to mod, I remember trying to make my first mod for Minecraft, it didn't really do anything, but the process introduced me to my first programming language, Java!From there I copied a YouTube tutorial and 'made' my first game! Then it was off to Unity and C#.I have always played games with friends or family and it was the very time spent that made me pursue game development even further. I loved the connections that we deepened together with my dad as we became a team in WoW or built structures together with my cousin in Minecraft. I hope that one day, games that I work on have that effect on many players for years to come.
+            </div>
+        </div>
+    </div>
+</div>
