--- a/Views/Resume/Index.cshtml
+++ b/Views/Resume/Index.cshtml
@@ -1,2 +1,15 @@
-﻿
-<a href="https://onedrive.live.com/download?resid=324C3E78566D9F53%2152807&authkey=!AHXgtazQR54FMWI&em=2" class="btn btn-primary">Download</a>
+﻿<div class="container my-5">
+    <div class="row justify-content-center">
+        <div class="col-12 col-lg-6">
+            <h1 class="mb-3 text-center">
+                Resume
+            </h1>
+            <div class="mb-3 blog-details-content">
+                This page is still under construction. For now, you can click on this button to download my resume in .pdf form :)
+                <div class="d-flex justify-content-center">
+                    <a href="https://onedrive.live.com/download?resid=324C3E78566D9F53%2152807&authkey=!AHXgtazQR54FMWI&em=2" class="btn btn-primary">Download</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
