Change button color

--- a/Views/Blogs/List.cshtml
+++ b/Views/Blogs/List.cshtml
@@ -73,7 +73,7 @@
                                     <div class="card-body">
                                         <p class="card-text">@blogPost.Description</p>
                                     </div>
-                                    <a class="btn btn-outline-warning card-link m-2" asp-area="" asp-controller="Blogs" asp-action="Index" asp-route-urlHandle="@blogPost.UrlHandle">Read More</a>
+                                    <a class="btn btn-secondary card-link m-2" asp-area="" asp-controller="Blogs" asp-action="Index" asp-route-urlHandle="@blogPost.UrlHandle">Read More</a>
                                     <div class="card-footer text-muted">
                                         @blogPost.PublishDate.ToShortDateString()
                                     </div>
