--- a/Views/Projects/List.cshtml
+++ b/Views/Projects/List.cshtml
@@ -77,7 +77,7 @@ SMALL CARD
                                     <div class="card-body">
                                         <p class="card-text">@project.Description</p>
                                     </div>
-                                    <a class="btn btn-outline-warning card-link m-2" asp-area="" asp-controller="Projects" asp-action="Index" asp-route-urlHandle="@project.UrlHandle">Read More</a>
+                                    <a class="btn btn-secondary card-link m-2" asp-area="" asp-controller="Projects" asp-action="Index" asp-route-urlHandle="@project.UrlHandle">Read More</a>
                                     <div class="card-footer text-muted">
                                         @project.PublishDate.ToShortDateString()
                                     </div>
