--- a/Views/AdminProjects/List.cshtml
+++ b/Views/AdminProjects/List.cshtml
@@ -82,11 +82,26 @@
                         <td>
                             <div>
                                 @if (project.Blogs != null && project.Blogs.Any()) {
-                                    foreach (var blog in project.Blogs) {
-                                        <div>
-                                            <span class="badge bg-secondary me-1">@blog.Title</span>
+                                    <div class="accordion mb-4 h-100" id="accordionExample">
+                                        <div class="accordion-item h-100">
+                                            <h2 class="accordion-header" id="headingOne">
+                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#@project.Id" aria-expanded="false" aria-controls="@project.Id">
+                                                    Associated Blog Posts
+                                                </button>
+                                            </h2>
+                                            <div id="@project.Id" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample" style="">
+                                                <div class="accordion-body">
+                                                    <ul class="list-group">
+                                                        @foreach (var blogPost in project.Blogs) {
+                                                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                                                <a href="/Blogs?urlHandle=@blogPost.UrlHandle">@blogPost.Title</a>
+                                                            </li>
+                                                        }
+                                                    </ul>
+                                                </div>
+                                            </div>
                                         </div>
-                                    }
+                                    </div>
                                 }
                             </div>
                         </td>
