Fancy Up Resume & About Me

--- a/Views/About/Index.cshtml
+++ b/Views/About/Index.cshtml
@@ -1,11 +1,27 @@
 ﻿<div class="container my-5">
     <div class="row justify-content-center">
-        <div class="col-12 col-lg-6">
+        <div class="col-12 col-lg-6 position-relative">
             <h1 class="mb-3 text-center">
                 About Me
             </h1>
             <div class="mb-3 blog-details-content">
-                Growing up, I was always drawn to the immersive worlds and challenging gameplay of video games. One game that particularly captured my attention was World of Warcraft, which I started playing when I was just eight years old. I was too young to have an account of my own so I'd share one with my mom. I still remember walking through Ashenvale on my Night Elf priest thinking how amazing the atmosphere was. As I grew to love WoW, I was introduced to Warcraft 3 by my uncle and was shown the level editor within. I was amazed at the endless posibilities flowing through my 12 year old mind with what I could make. I think this was a turning point in my life where I realized I wanted to become a game developer.I played Minecraft with my cousin and we loved to build automated machines to do our work for us. We also LOVED to mod, I remember trying to make my first mod for Minecraft, it didn't really do anything, but the process introduced me to my first programming language, Java!From there I copied a YouTube tutorial and 'made' my first game! Then it was off to Unity and C#.I have always played games with friends or family and it was the very time spent that made me pursue game development even further. I loved the connections that we deepened together with my dad as we became a team in WoW or built structures together with my cousin in Minecraft. I hope that one day, games that I work on have that effect on many players for years to come.
+                <div class="mb-3">
+                    <h3>Where it All Began</h3>
+                    The fantastical worlds and challenging puzzles of video games have always captivated me. At eight years old, I embarked on my first adventure in World of Warcraft, joining my mom on her account. I vividly remember the hushed reverence I felt exploring the shadowy forests of Ashenvale on my Night Elf priest. The towering ancient trees dripping with moss, the bioluminescent flora casting an ethereal glow – it was a world unlike anything I'd ever seen.
+                </div>
+                <div class ="mb-3">
+                    <h3>A Spark of Creation</h3>
+                    This love for immersive worlds only grew stronger. When I was 12, my uncle introduced me to the level editor within Warcraft 3. The possibilities ignited a spark in my mind. Suddenly, I wasn't just exploring these worlds; I could create them! I spent countless hours dreaming up fantastical landscapes and challenging encounters, the power to shape these virtual experiences utterly enthralling.
+                </div>
+                <div class ="mb-3">
+                    <h3>Building and Experimenting</h3>
+                    Minecraft became another playground for my imagination. With my cousin, we reveled in building elaborate structures and automating tasks with intricate machines. But what truly captivated me was the modding scene. I remember the thrill of tinkering with code, attempting to create my first Minecraft mod. It may not have done much (let's be honest, it was probably a rudimentary texture swap!), but that clumsy first step introduced me to the world of programming – Java, in this case.
+                </div>
+                <div class="mb-3">
+                    <h3>Learning and Growing</h3>
+                    From there, I dove into the world of Unity and C#. YouTube tutorials became my instructors, each lesson a stepping stone on the path to building my own games. This journey has been driven by the joy of playing games with loved ones. The camaraderie forged in epic WoW raids with my dad, the shared laughter while constructing massive structures in Minecraft with my cousin – these experiences are what truly solidified my desire to become a game developer.
+                </div>
+                
             </div>
         </div>
     </div>
