--- a/Views/AdminBlogPosts/Add.cshtml
+++ b/Views/AdminBlogPosts/Add.cshtml
@@ -59,11 +59,14 @@
         </div>
     </form>
 </div>
+<script src="../../js/plugins/file.min.js"></script>
 
 
 @section Scripts {
     <script>
-        var editor = new FroalaEditor('#content');
+        var editor = new FroalaEditor('#content', {
+            imageUploadURL : '/api/images'
+        });
 
         const featuredUploadElement = document.getElementById('featuredImageUpload');
         const featuredImageUrlElement = document.getElementById('featuredImageUrl');
