--- a/Views/Resume/Index.cshtml
+++ b/Views/Resume/Index.cshtml
@@ -1,10 +1,19 @@
 ﻿<div class="container my-5">
-    <div class="row justify-content-center">
-        <h1 class="mb-3 text-center">
-            Resume
-        </h1>
-        <div><iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1XKmXbyYVlr8QnR6vtiWb75HMgya9XKL0TjZ15y-dc80&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe></div>
-        <div class="col-12 col-lg-6">
+    <div>
+        <div class="d-flex mb-3 justify-content-between">
+            <div>
+                <h1 class="text-center">
+                    Resume
+                </h1>
+            </div>
+            <div class="align-content-center">
+                <a href="https://onedrive.live.com/download?resid=324C3E78566D9F53%2152807&authkey=!AHXgtazQR54FMWI&em=2" class="btn btn-primary">Download</a>
+            </div>
+        </div>
+    </div>
+    <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1XKmXbyYVlr8QnR6vtiWb75HMgya9XKL0TjZ15y-dc80&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
+    <div class="d-flex justify-content-center">
+        <div class="col-12 col-lg-6 d-flex justify-content-center">
             <div class="mb-3 blog-details-content">
                 <div class="container py-4">
                     <div class="row justify-content-center">
@@ -77,21 +86,25 @@
                                     <li class="mb-4">
                                         <h4>TrustyBot (Solo Project) -</h4>
                                         <a href="https://github.com/RyanFloresTT/TrustyBot">GitHub</a>
-                                        <p>A Discord bot showcasing custom commands, extension methods, organized game data, and HTTP requests.</p>
+                                        <ul>
+                                            <li>A Discord bot showcasing custom commands, extension methods, organized game data, and HTTP requests.</li>
+                                        </ul>
                                     </li>
                                     <li class="mb-4">
                                         <h4>Crystal Chaos (Solo Project) -</h4>
                                         <a href="https://github.com/RyanFloresTT/TowerDefenseGame">GitHub</a>
-                                        <p>Unity game project demonstrating knowledge of C# programming. Designed a tower defense game, and implemented features such as an ability system, enemy spawning, and UI enhancements. Leveraged Object Pooling and Scriptable Objects for efficient resource management.</p>
+                                        <ul>
+                                            <li>Unity game project demonstrating knowledge of C# programming. Designed a tower defense game, and implemented features such as an ability system, enemy spawning, and UI enhancements. Leveraged Object Pooling and Scriptable Objects for efficient resource management.</li>
+                                        </ul>
                                     </li>
                                 </ul>
                             </section>
 
                             <section class="mb-5">
-                                <h4>Experience</h4>
+                                <h3>Experience</h3>
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <h3>Palm Springs Baking Co., Palm Springs, California (2017-Present)</h3>
+                                        <h4>Palm Springs Baking Co., Palm Springs, California (2017-Present)</h4>
                                         <p>Quality Assurance Manager</p>
                                         <ul>
                                             <li>Improved bakery operations by creating custom Excel spreadsheets and visualizations for enhanced data tracking and analysis.</li>
@@ -101,11 +114,10 @@
                                     </div>
                                 </div>
                             </section>
+                        </div>
+
                     </div>
-                <div class="d-flex justify-content-center">
-                    <a href="https://onedrive.live.com/download?resid=324C3E78566D9F53%2152807&authkey=!AHXgtazQR54FMWI&em=2" class="btn btn-primary">Download</a>
                 </div>
             </div>
         </div>
     </div>
-</div>
