Update About Page

--- a/Views/About/Index.cshtml
+++ b/Views/About/Index.cshtml
@@ -7,15 +7,15 @@
             <div class="mb-3 blog-details-content">
                 <div class="mb-3">
                     <h3>Where it All Began</h3>
-                    The fantastical worlds and challenging puzzles of video games have always captivated me. At eight years old, I embarked on my first adventure in World of Warcraft, joining my mom on her account. I vividly remember the hushed reverence I felt exploring the shadowy forests of Ashenvale on my Night Elf priest. The towering ancient trees dripping with moss, the bioluminescent flora casting an ethereal glow – it was a world unlike anything I'd ever seen.
+                    The worlds and challenging puzzles of video games have always captivated me. At eight years old, I embarked on my first adventure in World of Warcraft, joining my mom on her account. I vividly remember the awe I felt exploring at the forests of Ashenvale on my Night Elf priest. The towering ancient trees dripping with moss, the creatures and quests of the world made it an engaging and captivating experience I have yet to forget.
                 </div>
                 <div class ="mb-3">
                     <h3>A Spark of Creation</h3>
-                    This love for immersive worlds only grew stronger. When I was 12, my uncle introduced me to the level editor within Warcraft 3. The possibilities ignited a spark in my mind. Suddenly, I wasn't just exploring these worlds; I could create them! I spent countless hours dreaming up fantastical landscapes and challenging encounters, the power to shape these virtual experiences utterly enthralling.
+                    This love for immersive worlds only grew stronger. When I was 12, my uncle introduced me to the level editor within Warcraft 3. The possibilities ignited a spark in my mind. Suddenly, I wasn't just exploring these worlds, I was also creating them! I remember my uncle showing me the power of the WC3 editor, allowing myself to name the NPC's anything I wanted. I had just recently adopted a dog and he named a Felhound after her. The ability to create anything at my finger tips felt like magic.
                 </div>
                 <div class ="mb-3">
                     <h3>Building and Experimenting</h3>
-                    Minecraft became another playground for my imagination. With my cousin, we reveled in building elaborate structures and automating tasks with intricate machines. But what truly captivated me was the modding scene. I remember the thrill of tinkering with code, attempting to create my first Minecraft mod. It may not have done much (let's be honest, it was probably a rudimentary texture swap!), but that clumsy first step introduced me to the world of programming – Java, in this case.
+                    Minecraft became another playground for my imagination. With my cousin, we loved building elaborate structures and automating tasks with redstone machines. But what truly captivated us was the modding scene. I remember the excitement of tinkering with code, attempting to create my first Minecraft mod. It may not have done much (let's be honest, it was probably a rudimentary texture swap!), but that clumsy first step introduced me to the world of programming – Java, in this case.
                 </div>
                 <div class="mb-3">
                     <h3>Learning and Growing</h3>
