--- a/Views/AdminBlogPosts/Add.cshtml
+++ b/Views/AdminBlogPosts/Add.cshtml
@@ -64,9 +64,7 @@
 
 @section Scripts {
     <script>
-        var editor = new FroalaEditor('#content', {
-            imageUploadURL : '/api/images'
-        });
+        var editor = new FroalaEditor('#content');
 
         const featuredUploadElement = document.getElementById('featuredImageUpload');
         const featuredImageUrlElement = document.getElementById('featuredImageUrl');
@@ -77,7 +75,6 @@
         function updateUrlHandle() {
             var title = titleElement.value.trim().toLowerCase().replace(/\s+/g, '-').replace(/[^a-z0-9-]/g, '');
             urlHandleElement.value = title;
-            console.log(title)
         }
 
         titleElement.addEventListener('change', updateUrlHandle);
@@ -105,6 +102,5 @@
         }
 
         featuredUploadElement.addEventListener('change', uploadFeaturedImage);
-        hljs.highlightAll();
     </script>
 }
