Format BlogList + Add Loading Bar

--- a/Components/Components/FeaturedBlogCard.razor
+++ b/Components/Components/FeaturedBlogCard.razor
@@ -1,8 +1,8 @@
 ﻿<MudCard>
-    <MudCardMedia Image="@Project.FeaturedImageUrl" Height="200" />
+    <MudCardMedia Image="@BlogPost.FeaturedImageUrl" Height="200" />
     <MudCardContent>
-        <MudText Typo="Typo.h5">@Project.Title</MudText>
-        <MudText Typo="Typo.body2">@Project.Description</MudText>
+        <MudText Typo="Typo.h5">@BlogPost.Title</MudText>
+        <MudText Typo="Typo.body2">@BlogPost.Description</MudText>
     </MudCardContent>
     <MudCardActions>
         <MudButton Variant="Variant.Text" Color="Color.Primary">Read More</MudButton>
