--- a/Components/Pages/BlogList.razor
+++ b/Components/Pages/BlogList.razor
@@ -1,31 +1,32 @@
-﻿@page "/Projects"
+﻿@page "/Blogs"
 @using TrustyPortfolio.Components.Components
 
 <div class="align-content-center">
-    <h1 class="text-center mt-4">Featrued Projects: </h1>
+    <h1 class="text-center mt-4">Featrued Blogs: </h1>
 </div>
 
 <div class="d-flex flex-wrap">
-    @if (!featuredProjects.Any()) {
+    @if (!featuredBlogs.Any()) {
         <MudProgressLinear Color="Color.Primary" Indeterminate="true" Class="my-7" />
     } else {
-        @foreach (var project in featuredProjects) {
+        @foreach (var blog in featuredBlogs) {
             <div class="col-lg-4 col-md-6 col-sm-12 p-4">
-                <FeaturedProjectCard Project="project" />
+                <FeaturedBlogCard BlogPost="blog" />
             </div>
         }
     }
 </div>
 <div class="align-content-center">
-    <h1 class="text-center">More Projects: </h1>
+    <h1 class="text-center">More Blogs: </h1>
 </div>
 
 <div class="d-flex flex-wrap">
-    <MudProgressLinear Color="Color.Primary" Indeterminate="true" Class="my-7" />
+    @if (!blogs.Any()) {
+        <MudProgressLinear Color="Color.Primary" Indeterminate="true" Class="my-7" />
     } else {
-        @foreach (var project in projects) {
+        @foreach (var blog in blogs) {
             <div class="col-lg-3 col-md-6 col-sm-6 p-4">
-                <ProjectCard Project="project" />
+                <BlogCard BlogPost="blog" />
             </div>
         }
     }
