--- a/Components/Pages/ProjectList.razor
+++ b/Components/Pages/ProjectList.razor
@@ -6,7 +6,7 @@
 </div>
 
 <div class="d-flex flex-wrap">
-    @if (!featuredProjects.Any()) {
+    @if (!featuredProjects.Any() || featuredProjects == null) {
         <MudProgressLinear Color="Color.Primary" Indeterminate="true" Class="my-7" />
     } else {
         @foreach (var project in featuredProjects) {
@@ -21,6 +21,7 @@
 </div>
 
 <div class="d-flex flex-wrap">
+    @if (!projects.Any() || projects == null){
     <MudProgressLinear Color="Color.Primary" Indeterminate="true" Class="my-7" />
     } else {
         @foreach (var project in projects) {
