Add Project/Blog Index + Add Dark Mode

--- a/Components/Components/FeaturedBlogCard.razor
+++ b/Components/Components/FeaturedBlogCard.razor
@@ -5,6 +5,6 @@
         <MudText Typo="Typo.body2">@BlogPost.Description</MudText>
     </MudCardContent>
     <MudCardActions>
-        <MudButton Variant="Variant.Text" Color="Color.Primary">Read More</MudButton>
+        <MudButton Href="@GetURLHandle()" Variant="Variant.Text" Color="Color.Primary">Read More</MudButton>
     </MudCardActions>
 </MudCard>
