--- a/Components/Components/ProjectCard.razor
+++ b/Components/Components/ProjectCard.razor
@@ -11,6 +11,6 @@
         <MudText Typo="Typo.body2">@Project.Description</MudText>
     </MudCardContent>
     <MudCardActions>
-        <MudButton Variant="Variant.Text" Color="Color.Primary">Read More</MudButton>
+        <MudButton Href="@GetURLHandle()" Variant="Variant.Text" Color="Color.Primary">Read More</MudButton>
     </MudCardActions>
 </MudCard>
