--- a/Components/Pages/ProjectList.razor
+++ b/Components/Pages/ProjectList.razor
@@ -2,7 +2,7 @@
 @using TrustyPortfolio.Components.Components
 
 <div class="align-content-center">
-    <h1 class="text-center mt-4">Featrued Projects: </h1>
+    <h1 class="text-center mt-4">Featured Projects: </h1>
 </div>
 
 <div class="d-flex flex-wrap">
