--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,5 +1,6 @@
 ﻿@inherits LayoutComponentBase
-<MudThemeProvider />
+@using TrustyPortfolio.Components.Components
+<MudThemeProvider @ref="@mudThemeProvider" @bind-IsDarkMode="@IsDarkMode" />
 <MudDialogProvider />
 <MudSnackbarProvider />
 
@@ -10,6 +11,9 @@
             <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
             <MudText Typo="Typo.h5" Class="ml-3">Trusty Portfolio</MudText>
             <MudSpacer />
+            <MudToggleIconButton @bind-Toggled="@IsDarkMode"
+                                 Icon="@Icons.Material.TwoTone.WbSunny" Color="@Color.Error" Title="Off"
+                                 ToggledIcon="@Icons.Material.Filled.Nightlight" ToggledColor="@Color.Success" ToggledTitle="On" />
             <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />
         </MudAppBar>
         <MudDrawer @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
