--- a/Components/Pages/BlogList.razor
+++ b/Components/Pages/BlogList.razor
@@ -2,7 +2,7 @@
 @using TrustyPortfolio.Components.Components
 
 <div class="align-content-center">
-    <h1 class="text-center mt-4">Featrued Blogs: </h1>
+    <h1 class="text-center mt-4">Featured Blogs: </h1>
 </div>
 
 <div class="d-flex flex-wrap">
@@ -16,6 +16,7 @@
         }
     }
 </div>
+
 <div class="align-content-center">
     <h1 class="text-center">More Blogs: </h1>
 </div>
