--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -24,10 +24,18 @@
 <MudContainer Class="mt-16 px-8" MaxWidth="MaxWidth.False">
     <MudGrid>
         <MudItem xs="12" sm="6" md="4">
-            <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;"></MudPaper>
+            <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
+                <iframe style="width: 100%; height: 100%; margin: 10px; border-radius: 12px;" src="https://open.spotify.com/embed/playlist/37i9dQZF1EpgedWjSUXJYl?utm_source=generator&theme=0" width="100%" height="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </MudPaper>
         </MudItem>
         <MudItem xs="12" sm="6" md="4">
-            <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;"></MudPaper>
+            <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
+                <iframe style="width: calc(100% - 20px); height: calc(100% - 20px); margin: 10px;"
+                        title="Discord user embed"
+                        frameborder="0"
+                        sandbox="allow-scripts"
+                        src="https://widgets.vendicated.dev/user?id=219136857663864833&theme=dark&banner=false&full-banner=false&rounded-corners=true&discord-icon=true&badges=true&guess-nitro=false&"></iframe>
+            </MudPaper>
         </MudItem>
         <MudItem xs="12" sm="12" md="4">
             <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;"></MudPaper>
