--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -11,3 +11,4 @@
 @using MudBlazor
 @using TrustyPortfolio.Models.Domain
 @using TrustyPortfolio.Repositories
+@using Microsoft.AspNetCore.Components.Authorization
