--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,6 +1,5 @@
 ﻿@inherits LayoutComponentBase
-@using TrustyPortfolio.Components.Components
-
+@namespace TrustyPortfolio.Components.Layout
 <MudThemeProvider @ref="@mudThemeProvider" @bind-IsDarkMode="@IsDarkMode" />
 <MudDialogProvider />
 <MudSnackbarProvider />
